Bug 416342 - download of attachments window shows that download does not progress. r=bienvenu, sr=bienvenu